crates/toml/tests/snapshots/invalid/array/only-comma-02.stderr
TOML parse error at line 1, column 18
  |
1 | only-comma-02 = [,,]
  |                  ^
extra comma in array, expected value

---
TOML parse error at line 1, column 19
  |
1 | only-comma-02 = [,,]
  |                   ^
extra comma in array, expected value
